comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com css3</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, error quasi. Voluptatibus facilis, soluta reiciendis quae error quibusdam dolor sequi voluptates, itaque omnis est eius ut debitis optio ipsum adipisci.</p>
         </article>
         <article>
             <h2>Artigo 002</h2>
